--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,204 @@
 html,
 body {
-    font-family: "Inter", sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: "Inter", sans-serif;
+  margin: 0;
+  padding: 0;
+  user-select: none;
+}
+* {
+  user-select: none;
 }
 @supports (font-variation-settings: normal) {
-    html,
-    body {
-        font-family: "Inter var", sans-serif;
-    }
+  html,
+  body {
+    font-family: "Inter var", sans-serif;
+  }
 }
 
 footer svg {
-    fill: #9f9f9f;
-    transition: all 60ms ease-out;
+  fill: #9f9f9f;
+  transition: all 60ms ease-out;
+  width: 28px;
+  margin: 0 12px;
 }
 
 footer svg:hover {
-    fill: #333333;
+  fill: #333333;
+}
+
+.bg-black {
+  background-color: #000000;
+}
+
+.ui-box{
+  background-color: inherit;
+}
+
+
+@media (min-width: 768px)
+{
+  .ui-box{
+    position: sticky;
+    top: 0;
+    z-index: 600;
+  }
+}
+
+
+.master-input {
+  font-size: 4rem;
+  border: none;
+  overflow: hidden;
+  font-weight: 800;
+  resize: none;
+  /* extra */
+}
+.master-input:focus {
+  outline: none;
+}
+
+.hiddendiv {
+  display: none;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+.colors-block {
+  margin-bottom: 18px;
+  width: 100%;
+  height: auto;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.color {
+  padding: 26px;
+  margin-right: 4px;
+  margin-top: 4px;
+  background-color: #9f9f9f;
+  transition: all 22ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  cursor: pointer;
+  border-radius: 3px;
+  display: inline-block;
+}
+.color.active {
+  transform: scale(1.18);
+  border-radius: 6px;
+  -moz-box-shadow: inset 0 0 0px 3px #00000080;
+  -webkit-box-shadow: inset 0 0 0px 3px #00000080;
+  box-shadow: inset 0 0 0px 3px #00000080;
+}
+
+.color:hover {
+  transform: scale(1.18);
+  border-radius: 6px;
+}
+
+.color:active {
+  transform: scale(0.94);
+  border-radius: 50%;
+}
+
+.top-0 {
+  top: 0;
+}
+
+/* Tooltip */
+
+/* START TOOLTIP STYLES */
+[tooltip] {
+  position: relative; /* opinion 1 */
+}
+
+/* Applies to all tooltips */
+[tooltip]::before,
+[tooltip]::after {
+  text-transform: none; /* opinion 2 */
+  font-size: 0.9em; /* opinion 3 */
+  line-height: 1;
+  user-select: none;
+  pointer-events: none;
+  position: absolute;
+  display: none;
+  opacity: 0;
+}
+[tooltip]::before {
+  content: "";
+  border: 5px solid transparent; /* opinion 4 */
+  z-index: 1001; /* absurdity 1 */
+}
+[tooltip]::after {
+  content: attr(tooltip); /* magic! */
+
+  /* most of the rest of this is opinion */
+  font-family: inherit;
+  text-align: center;
+
+  /* 
+      Let the content set the size of the tooltips 
+      but this will also keep them from being obnoxious
+      */
+  min-width: 3em;
+  max-width: 21em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 1ch 1.5ch;
+  border-radius: 0.3ch;
+  box-shadow: 0 1em 2em -0.5em rgba(0, 0, 0, 0.35);
+  background: #333;
+  color: #fff;
+  z-index: 1000; /* absurdity 2 */
+}
+
+/* Make the tooltips respond to hover */
+[tooltip]:hover::before,
+[tooltip]:hover::after {
+  display: block;
+}
+
+/* don't show empty tooltips */
+[tooltip=""]::before,
+[tooltip=""]::after {
+  display: none !important;
+}
+
+/* FLOW: UP */
+[tooltip]:not([flow])::before,
+[tooltip][flow^="up"]::before {
+  bottom: 100%;
+  border-bottom-width: 0;
+  border-top-color: #333;
+}
+[tooltip]:not([flow])::after,
+[tooltip][flow^="up"]::after {
+  bottom: calc(100% + 5px);
+}
+[tooltip]:not([flow])::before,
+[tooltip]:not([flow])::after,
+[tooltip][flow^="up"]::before,
+[tooltip][flow^="up"]::after {
+  left: 50%;
+  transform: translate(-50%, -0.5em);
+}
+
+/* KEYFRAMES */
+@keyframes tooltips-vert {
+  to {
+    opacity: 0.9;
+    transform: translate(-50%, 0);
+  }
+}
+
+@keyframes tooltips-horz {
+  to {
+    opacity: 0.9;
+    transform: translate(0, -50%);
+  }
+}
+
+/* FX All The Things */
+[tooltip]:not([flow]):hover::before,
+[tooltip]:not([flow]):hover::after{
+  animation: tooltips-vert 300ms ease-out forwards 300ms;
 }
